--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
-<h1>Hello World. </h1>
-<%= render "text" %>
-
-
+<div class="jumbotron">
+  <h1>Daily Mission</h1>
+  <p>This is a do to list Ruby on Rails Application.</p>
+  <%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg"%>
+</div>
