--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
   <h1><i class="fa fa-user-secret"></i> DailyMission</h1>
   <p>This is a do to list Ruby on Rails Application.</p>
-  <%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg"%>
+  <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary btn-lg"%>
 </div>
