--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,23 +1,20 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2 class="text-center">Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }, html: {class: "form-signin"}) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+    <%= f.input :email, required: true, autofocus: true, placeholder: "Email", input_html: {class: "form-control"}, label_html: { class: 'screenreader' } %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
 
-    <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
-    <%= f.input :password_confirmation, required: false %>
-    <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
-  </div>
+    <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false, placeholder: "Password", input_html: {class: "form-control"}, label_html: { class: 'screenreader' } %>
+    <%= f.input :password_confirmation, required: false, placeholder: "Password Confirmation", input_html: {class: "form-control"}, label_html: { class: 'screenreader' } %>
+    <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true, placeholder: "Currrent Password", input_html: {class: "form-control"}, label_html: { class: 'screenreader' }  %>
 
-  <div class="form-actions">
     <%= f.button :submit, "Update" %>
-  </div>
+
 <% end %>
 
 <h3>Cancel my account</h3>
