--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,8 +16,16 @@
          
       <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
-          <li><%= link_to "Settings", edit_user_registration_path %></li>
-          <li><%= link_to "Log Out", destroy_user_session_path %></li>
+            <%= link_to "#" , class:"dropdown-toggle", :'data-toggle' =>"dropdown",role:"button", :'aria-haspopup' =>"true", :'aria-expanded' =>"false" do %>
+            <%= image_tag current_user.gravatar_url, alt:"menu", style: "max-width: 100%;height:40px;margin-top:5px;display:inline-block;border-radius:75%;"%>
+            <span class="caret"></span>
+            <% end %> 
+              <ul class="dropdown-menu text-left pull-left" role="menu">
+                <li><%= link_to "Log Out", destroy_user_session_path, :method => :delete %></li>
+                <li><%= link_to "Settings", edit_user_registration_path %></li>
+            </ul>
+          </li>          
+      </ul>
         <% else %>
           <li><%= link_to "About", about_path %></li>
           <li><%= link_to "Login", new_user_session_path %></li>
