--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -7,7 +7,7 @@
     <tr>
       <th scope="col">Content</th>
       <th scope="col">State</th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
@@ -19,6 +19,7 @@
         <td><%= link_to 'Show', task %></td>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
         <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to "Mark as Doing", change_task_path(task, state: "doing"), method: :put %></td>
       </tr>
     <% end %>
   </tbody>
@@ -33,7 +34,7 @@
     <tr>
       <th scope="col">Content</th>
       <th scope="col">State</th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
@@ -46,6 +47,9 @@
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
         <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
+      <td><%= link_to "Mark as To Do", change_task_path(task, state: "to_do"), method: :put %></td>
+      <td><%= link_to "Mark as Done", change_task_path(task, state: "done"), method: :put %></td>
+
     <% end %>
   </tbody>
 </table>
@@ -59,7 +63,7 @@
     <tr>
       <th scope="col">Content</th>
       <th scope="col">State</th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
@@ -71,6 +75,8 @@
         <td><%= link_to 'Show', task %></td>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
         <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to "Mark as Doing", change_task_path(task, state: "doing"), method: :put %></td>
+
       </tr>
     <% end %>
   </tbody>
