Fixed links position and styled the form controls

--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -2,5 +2,9 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @task %> |
-<%= link_to 'Back', tasks_path %>
+<nav>
+  <ul class="pager">
+    <li><%= link_to 'Show', @task %></li>
+    <li><%= link_to 'Back', tasks_path %></li>
+  </ul>
+</nav>
