--- a/app/assets/stylesheets/devise.css.scss
+++ b/app/assets/stylesheets/devise.css.scss
@@ -1,4 +1,55 @@
-.form-signin {
+html {
+    font-size: 62.5%;
+}
+
+h1,
+h2 {
+    font-size: 2.6rem; /* 26 ÷ $rembase */
+}
+
+h3,
+h4 {
+    font-size: 1.8rem; /* 18 ÷ $rembase */
+}
+
+.form-control::-moz-placeholder {
+  color: #3275C1;
+}
+.form-control:-ms-input-placeholder {
+  color: #3275C1;
+}
+.form-control::-webkit-input-placeholder {
+  color: #3275C1;
+}
+
+.single-pager a{
+  display: inline-block;
+  padding: 5px 14px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 15px;
+}
+
+.border-div {
+  max-width: 370px;
+  padding: 19px 29px 29px;
+  margin: 0 auto 10px;
+  background-color: #fff;
+  border: 1px solid #e5e5e5;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+  box-shadow: 0 1px 2px rgba(0,0,0,.05);
+}
+
+.single-pager a:hover, .single-pager a:focus {
+  text-decoration: none;
+  background-color: #eee;
+}
+
+.form-signin, .show-info {
   max-width: 330px;
   padding: 15px;
   margin: 0 auto;
@@ -7,18 +58,22 @@
 .form-signin .checkbox {
   margin-bottom: 10px;
 }
-.form-signin .checkbox {
-  font-weight: normal;
-}
+
 .form-signin .form-control {
   position: relative;
   height: auto;
   -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   padding: 10px;
   font-size: 16px;
 }
+
+.form-signin .checkbox, .form-signin .password-info {
+  font-weight: normal;
+  margin-left: 20px;
+}
+
 .form-signin .form-control:focus {
   z-index: 2;
 }
