--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,24 +1,31 @@
-<h2 class="text-center">Edit <%= resource_name.to_s.humanize %></h2>
+<div class="border-div">
+	<h1 class="text-center">Edit <%= resource_name.to_s.humanize %></h1>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }, html: {class: "form-signin"}) do |f| %>
-  <%= f.error_notification %>
+	<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "form-signin"}) do |f| %>
+	<%= f.error_notification %>
 
-    <%= f.input :email, required: true, autofocus: true, placeholder: "Email", input_html: {class: "form-control"}, label_html: { class: 'screenreader' } %>
+	<%= f.input :email, required: true, autofocus: true, placeholder: "Email", input_html: {class: "form-control"}, label_html: { class: 'screenreader' } %>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
+	<% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+	<p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+	<% end %>
 
-    <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false, placeholder: "Password", input_html: {class: "form-control"}, label_html: { class: 'screenreader' } %>
-    <%= f.input :password_confirmation, required: false, placeholder: "Password Confirmation", input_html: {class: "form-control"}, label_html: { class: 'screenreader' } %>
-    <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true, placeholder: "Currrent Password", input_html: {class: "form-control"}, label_html: { class: 'screenreader' }  %>
+	<%= f.input :password, autocomplete: "off", required: false, placeholder: "Password", input_html: {class: "form-control"}, label_html: { class: 'screenreader' } %>
+	<%= f.input :password_confirmation, required: false, placeholder: "Password Confirmation", input_html: {class: "form-control"}, label_html: { class: 'screenreader' } %>
+	<%= f.input :current_password, required: true, placeholder: "Currrent Password", input_html: {class: "form-control"}, label_html: { class: 'screenreader' }  %>
 
-    <%= f.button :submit, "Update" %>
+	<%= f.button :submit, "Update", class: "btn btn-primary btn-block" %>
 
-<% end %>
+	<h2 class="text-center">Cancel my Account</h2>
 
-<h3>Cancel my account</h3>
+	<p class="text-center">Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+	
+	<div class="pager single-pager">
+		<%= link_to "Back", :back %>
+	</div>
 
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+	<% end %>
 
-<%= link_to "Back", :back %>
+</div>
+
+
