--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,6 @@
-<h2 class="text-center">Sign up</h2>
+<div class="border-div">
+
+<h1 class="text-center">Sign up</h1>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "form-signin"}) do |f| %>
   <%= f.error_notification %>
@@ -8,6 +10,9 @@
     <%= f.input :password_confirmation, required: true, label_html: { class: 'screenreader' }, placeholder: "Password Confirmation", input_html: {class: "form-control"} %>
     <%= f.button :submit, "Sign up", class: "btn btn-primary btn-block" %>
 
+<%= render "devise/shared/links" %>
+
 <% end %>
 
-<%= render "devise/shared/links" %>
+</div>
+
