--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,6 @@
-<p id="notice"><%= notice %></p>
+<%= link_to new_task_path, class: "btn btn-info btn-md" do %>
+    <i class="glyphicon glyphicon-plus"></i> New Task
+<% end %>
 
 <div class="row">
   <div class="col-md-4"><h1 class="text-center">To Do</h1>
@@ -13,4 +15,4 @@
 </div>
 
 <br>
-<%= link_to 'New Task', new_task_path %>
+
