--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', tasks_path %>
+<div class="pager single-pager">
+	<%= link_to 'Back', tasks_path %>
+</div>
